This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.6.0
=============
- in db::getAllCoordinatesMao, adding possibility to select within a Box.
- new method in DbLine: createVerticalFromGrid()
- Migrate: in Grid to Grid, perform interpolation if flag_inter is True
- Add version in functions loadDoc and loadData (Python and R)
- Fix loadData in R when trying to download the data file from the web (require 'lares' package)
- in Model::createFromParam, use Default Space when given space argument is null.
- Fix loadData under windows ('\' was added in the URL)
- in Db::setLocator, if locatorIndex is set to -1, the new locator is ADDED to already existing ones.
- Class IProjMatrix renamed as IProj
- Class ShiftOpCs renamed as ShiftOpMatrix
- Class PrecisionOpCs renamed as PrecisionOpMatrix
- The library 'nlopt' is know used to perform optimization. At time, it should replace FOXLEG in the Automatic Structure Recognition (model_auto).
- The argument 'domain' has been added to API functions 'krigingSPDE', 'simulateSPDE' and 'logLikelihoddSPDE'. It allows specifying the extension of the domain covered by the SPDE meshing. If not defined, it is elaborated starting from argument 'dbin' and/or 'dbout'.
- ExtractDiag() of a PrecisionOp in Matrix-free version (test_PrecisionOp.py)
- Function areEqual() is renamed in isEqual()
- Functions isEqualExtended() are added to compare 2 scalar or 2 vectors
- R 4.4.2 support

Graphics
--------
- A new entry in plot3D.py: Slice3DOnDbGrid() which draws three slices around a corner.
- A new entry in plot3D.py: ScatterOnDb() to draw a set of points in 3D as a scatter
- A new entry in plot.py: baseMap() to display samples of a Db with a Base Map as background.

gstMarimo
---------
New module (adjacent to gstlearn) to develop interfaces using MARIMO notebooks
- the code for panel description is in python/modules